# mathesar

./: .dockerignore  .env.example  .flake8  .gitignore  1  404.html  ARCHITECTURE.md  CHANGES.md  CNAME  CONTRIBUTING.md  Caddyfile  DEPRECATION_WARNINGS.md  DEPRECATION_WARNINGS_EXAMPLES.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.caddy  Dockerfile.devdb  Dockerfile.integ-tests  Dockerfile.nginx  Dockerfile.nginx_local  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEVELOPMENT.md  MANAGED_SAAS.md  MANIFEST.in  Makefile  MathesarWithoutBash.md  QUICKSTART.md  README.md  SECURITY.md  THIRDPARTY  TROUBLESHOOTING.md  blah.html  build.sh  caddy.Dockerfile  check_django.sh  conftest.py  currency_info.json  db-check-run.sh  db-run.sh  (+58 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE  auto_request_review.yml  sync.yml
.npm/: anonymous-cli-metrics.json
.run/: pytest for mathesar.tests.run.xml
.tx/: config  integration.yml
0.1.7/: 404.html  index.html  objects.inv  sitemap.xml
0.10.0/: 404.html  CNAME  index.html  objects.inv  sitemap.xml
0.10.1/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0-testing.1/: 404.html  index.html  objects.inv  sitemap.xml
0.2.1/: 404.html  index.html  objects.inv  sitemap.xml
0.2.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2.3/: 404.html  index.html  sitemap.xml
0.2.4/: 404.html  index.html  sitemap.xml
0.2.5/: 404.html  index.html  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.6.0/: 404.html  index.html  sitemap.xml
0.7.0/: 404.html  index.html  sitemap.xml
0.7.1/: 404.html  index.html  objects.inv  sitemap.xml
0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
0.9.0/: 404.html  index.html  objects.inv  sitemap.xml
LICENSES/: javascript-detect-element-resize  python-dockerfile  (+3 more)
(+8109 files in other folders)
