[project]
name = "mathesar"
version = "0.2.0"
description = "Mathesar 0.2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clevercsv==0.8.2",
    "dj-database-url==2.3.0",
    "django==4.2.17",
    "django-fernet-encrypted-fields==0.1.3",
    "django-filter==24.3",
    "django-modern-rpc==1.0.3",
    "django-property-filter==1.2.0",
    "djangorestframework==3.15.2",
    "drf-access-policy==1.5.0",
    "frozendict==2.4.6",
    "gunicorn==23.0.0",
    "psycopg==3.2.3",
    "psycopg-binary==3.2.3",
    "psycopg2-binary==2.9.10",
    "requests==2.32.3",
    "sqlalchemy==1.4.54",
    "whitenoise==6.7.0",
]

[tool.vulture]
exclude = ["mathesar/migrations"]
ignore_names = ["go_to_patents_data_table", "go_to_all_types_table", "go_to_table_with_numbers_in_text", "admin_user"]
min_confidence = 90
