[project]
name = "mathesar"
version = "0.2.3"
description = "Mathesar 0.2.3"
readme = "README.md"
requires-python = ">=3.9"

[tool.uv]
python-downloads = "manual"

[tool.vulture]
exclude = ["mathesar/migrations"]
ignore_names = ["go_to_patents_data_table", "go_to_all_types_table", "go_to_table_with_numbers_in_text", "admin_user"]
min_confidence = 90
